--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -85,6 +85,9 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:hint="请输入验证码"
+                    android:textSize="16sp"
+                    android:textColorHint="@color/gray"
                     android:background="@null"
                     android:layout_marginLeft="10dp"
                     android:layout_marginStart="10dp"
