--- a/app/src/main/res/layout/process_content.xml
+++ b/app/src/main/res/layout/process_content.xml
@@ -23,9 +23,8 @@
                 android:id="@+id/process_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:dividerHeight="10dp"
-                android:divider="#ECF2F2"
+                android:dividerHeight="1dp"
+                android:divider="@color/defaultBack"
                 android:scrollbars="none"
                 />
         </LinearLayout>
