--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,23 +3,23 @@
 
     <item
         android:id="@+id/navigation_message"
-        android:icon="@drawable/ic_message_black_24dp"
+        android:icon="@drawable/ic_message"
         android:title="@string/title_message"/>
 
 
     <item
         android:id="@+id/navigation_work"
-        android:icon="@drawable/ic_work_black_24dp"
+        android:icon="@drawable/ic_work"
         android:title="@string/title_work"/>
 
     <item
         android:id="@+id/navigation_contacts"
-        android:icon="@drawable/ic_contacts_black_24dp"
+        android:icon="@drawable/ic_contact"
         android:title="@string/title_contacts"/>
 
     <item
         android:id="@+id/navigation_my"
-        android:icon="@drawable/ic_my_black_24dp"
+        android:icon="@drawable/ic_my"
         android:title="@string/title_my"/>
 
 </menu>
